couple of small fixes

--- a/app/views/blog/home/index.html.erb
+++ b/app/views/blog/home/index.html.erb
@@ -1,7 +1,7 @@
-<% content_for :home, true %>
+<% content_for :blog, true %>
 <% content_for :title, 'Blog' %>	
 <% content_for :has_footer, true %>
-<% content_for :template, 'home' %>
+<% content_for :template, 'blog' %>
 <% content_for :scripts do %>
 <script>
 </script>
