--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,7 +59,7 @@
 							</ul>
 						</li>
 						<li class="<%= 'active' if content_for? :blog %>">
-							<%= link_to 'Blog', '#' %>
+							<%= link_to 'Blog', blog_home_path %>
 						</li>
 						<li class="<%= 'active' if content_for? :about %>">
 							<%= link_to 'About', '#' %>
