--- a/app/views/blog/home/index.html.erb
+++ b/app/views/blog/home/index.html.erb
@@ -1,7 +1,7 @@
 <% content_for :blog, true %>
 <% content_for :title, 'Blog' %>	
 <% content_for :has_footer, true %>
-<% content_for :template, 'blog' %>
+<% content_for :template, 'blog blog_home' %>
 <% content_for :scripts do %>
 <script>
 </script>
@@ -22,7 +22,30 @@
 					<h1>Blog</h1>
 				</div>
 
+				<% @blog_posts.each do |blog_post| %>
+				<div class="row">
+					<div class="col-md-12">
+						<div class="bs-callout blog-entry">
+							<h4><%= link_to(blog_post.name, '#') %></h4>
+							<p><%= blog_post.short_body %></p>
 
+							<div class="details">
+								<ul>
+									<li>
+										Author: <strong><%= link_to(blog_post.user.username, user_view_path(blog_post.user.username)) %></strong>
+									</li>
+									<li>
+										Posted At: <strong><%= blog_post.created_at.strftime('%B %-d, %Y') %></strong>
+									</li>
+									<li>
+										Category: <strong><%= link_to(blog_post.blog_category.name, '#') %></stong>
+									</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
+				<% end %>
 
 				<ul class="pager">
 					<li class="previous <%= 'disabled' if !@has_less %>">
