--- a/app/views/blog/home/index.html.erb
+++ b/app/views/blog/home/index.html.erb
@@ -38,7 +38,7 @@
 										Posted At: <strong><%= blog_post.created_at.strftime('%B %-d, %Y') %></strong>
 									</li>
 									<li>
-										Category: <strong><%= link_to(blog_post.blog_category.name, '#') %></stong>
+										Category: <strong><%= link_to(blog_post.blog_category.name, '#') %></strong>
 									</li>
 								</ul>
 							</div>
