--- a/app/views/blog/home/index.html.erb
+++ b/app/views/blog/home/index.html.erb
@@ -26,7 +26,7 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div class="bs-callout blog-entry">
-							<h4><%= link_to(blog_post.name, '#') %></h4>
+							<h4><%= link_to(blog_post.name, blog_view_path(year: blog_post.created_at.year, month: blog_post.created_at.month, day: blog_post.created_at.day, slug: blog_post.slug)) %></h4>
 							<p><%= blog_post.short_body %></p>
 
 							<div class="details">
