--- a/app/views/blog/view/index.html.erb
+++ b/app/views/blog/view/index.html.erb
@@ -9,7 +9,8 @@
 
 <div class="bs-header" id="content">
 	<div class="container">
-		
+		<h1><%= @blog_post.name %></h1>
+		<p><%= @blog_post.short_body %></p>
 	</div>
 </div>
 
@@ -17,7 +18,11 @@
 	<div class="row">
 		<div class="col-md-9">
 			<div class="bs-branch-section blog-post">
-				
+				<div class="row">
+					<div class="col-md-12 panel">
+						<%= @markdown.render(@blog_post.full_body).html_safe() %>
+					</div>
+				</div>
 			</div>
 		</div>
 
