--- a/app/assets/stylesheets/blog/view.css.scss
+++ b/app/assets/stylesheets/blog/view.css.scss
@@ -1,4 +1,18 @@
 body.blog_view {
+	.blog-header {
+		> .container > .details {
+			margin-top: 20px;
+			margin-bottom: -20px;
+			font-size: 14px;
+
+			> ul {
+				list-style-type: none;
+				margin: 0;
+				padding: 0;
+			}
+		}
+	}
+
 	.blog-post {
 		margin-top: 30px;
 
