--- a/app/views/blog/partials/_category_sidebar.html.erb
+++ b/app/views/blog/partials/_category_sidebar.html.erb
@@ -1,4 +1,4 @@
-<div class="bs-sidebar" data-spy="affix" data-offset-top="201">
+<div class="bs-sidebar" data-spy="affix" data-offset-top="<%= yield(:data_affix_height) %>">
 	<ul class="nav bs-sidenav">
 		<li class="active">
 			<a href="#">Blog</a>
