windicator styling tweak on game history summary

--- a/app/views/halo4/service_record/index.html.erb
+++ b/app/views/halo4/service_record/index.html.erb
@@ -154,7 +154,7 @@
 											<span class="stat"><%= rand(12..24) %></span>
 										</div>
 
-										<div class="windicator"><%= friendly %></div>
+										<div class="windicator hidden-xs"><%= friendly %></div>
 									</div>
 								</div>
 							</a>
