--- a/app/views/halo4/commendations/index.html.erb
+++ b/app/views/halo4/commendations/index.html.erb
@@ -39,7 +39,7 @@
 									<div class="clearfix"></div>
 								</div>
 
-								<div class="progress progress-striped active">
+								<div class="progress">
 									<div class="progress-bar"  role="progressbar" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100" style="width: 69%">
 										<span class="sr-only">69% Complete</span>
 										<span class="progress-bar-indicator">69% Complete</span>
