--- a/app/views/halo4/specialization/index.html.erb
+++ b/app/views/halo4/specialization/index.html.erb
@@ -42,7 +42,7 @@
 											9
 										</strong>
 									</span>
-									<div class="progress progress-striped active">
+									<div class="progress">
 										<div class="progress-bar"  role="progressbar" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100" style="width: 69%">
 											<span class="sr-only">69% Complete</span>
 											<span class="progress-bar-indicator">69% Complete</span>
