--- a/app/assets/stylesheets/halo4/game_history.css.scss
+++ b/app/assets/stylesheets/halo4/game_history.css.scss
@@ -82,6 +82,7 @@ body.halo4_game_history {
 					> tr {
 						&.end-dnf {
 							background-color: #eee;
+							opacity: 0.3;
 						}
 						> td {
 							.player-emblem {
