--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -78,21 +78,21 @@
 							<a class="dropdown-toggle" data-toggle="dropdown" href="#"><%= current_user.username %> <b class="caret"></b></a>
 							<ul class="dropdown-menu">
 								<li>
-									<%= link_to 'View Profile', user_view_path(current_user.username) %>
+									<%= link_to('View Profile', user_view_path(current_user.username)) %>
 								</li>
 
 								<li class="divider"></li>
 								<li class="dropdown-header">SETTINGS</li>
 								<li>
-									<%= link_to 'Edit Profile', settings_profile_path %>
+									<%= link_to('Edit Profile', settings_profile_path) %>
 								</li>
 								<li>
-									<%= link_to 'Edit Sessions', settings_session_path %>
+									<%= link_to('Edit Sessions', settings_session_path) %>
 								</li>
 
 								<li class="divider"></li>
 								<li>
-									<%= link_to 'Sign Out', user_signout_path %>
+									<%= link_to('Sign Out', user_signout_path) %>
 								</li>
 							</ul>
 						</li>
