--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -82,8 +82,8 @@
 								</li>
 
 								<% if current_user.role.identifier == 3 %>
-									<li class="dividier"></li>
-									<div class="dropdown-header">WOAH</div>
+									<li class="divider"></li>
+									<div class="dropdown-header">DOMAIN</div>
 									<li>
 										<%= link_to('Admin Portal', admin_home_path) %>
 									</li>
