--- a/app/views/user/account/partials/_header.html.erb
+++ b/app/views/user/account/partials/_header.html.erb
@@ -1,40 +1,33 @@
 <div class="bs-header account-header" id="content">
 	<div class="container">
-		<% if content_for?(:setting_active) %>
-			<h1><%= current_user.username %></h1>
-			<p>Member Since <%= "#{current_user.created_at.day}/#{current_user.created_at.month}/#{current_user.created_at.year}" %></p>
-			<ul>
-				<% if current_user.role.identifier != 2 %>
-					<li><span class="label" style="background-color: #<%= current_user.role.colour %>;"><%= current_user.role.name %></span></li>
-				<% end %>
-				<li><span class="label label-info">Halo 4</span></li>
-				<li><span class="label label-info">Halo Reach</span></li>
-				<li><span class="label label-info">Halo 3</span></li>
-			</ul>
-		<% else %>
-			<h1><%= @account.username %></h1>
-			<p>Member Since <%= "#{@account.created_at.day}/#{@account.created_at.month}/#{@account.created_at.year}" %></p>
-			<ul>
-				<% if @account.role.identifier != 2 %>
-					<li><span class="label" style="background-color: #<%= @account.role.colour %>;"><%= @account.role.name %></span></li>
-				<% end %>
-				<li><span class="label label-info">Halo 4</span></li>
-				<li><span class="label label-info">Halo Reach</span></li>
-				<li><span class="label label-info">Halo 3</span></li>
-			</ul>
+		<%
+			storage = nil
+			storage = @account if content_for?(:setting_active)
+			storage = current_user if !content_for?(:setting_active)
+		%>
+		<h1><%= storage.username %></h1>
+		<p>Member Since <%= "#{storage.created_at.day}/#{storage.created_at.month}/#{storage.created_at.year}" %></p>
+		<ul>
+			<% if storage.role.identifier != 2 %>
+				<li><span class="label" style="background-color: #<%= storage.role.colour %>;"><%= storage.role.name %></span></li>
+			<% end %>
+			<li><span class="label label-info">Halo 4</span></li>
+			<li><span class="label label-info">Halo Reach</span></li>
+			<li><span class="label label-info">Halo 3</span></li>
+		</ul>
+		
+		<div class="actions">
+		<% if !content_for?(:setting_active) && current_user == storage %>
+			<%= link_to('Edit Profile', settings_profile_path, class: 'btn btn-outline-inverse btn-lg') %>
+			
+			<% if current_user.role_id == Role.find_by_identifier(1).id %>
+				<%= link_to('Resend Verification', user_resend_verification_path, class: 'btn btn-outline-inverse btn-lg') %>
+			<% end %>
 		<% end %>
-		<% if !content_for?(:setting_active) %>
-			<div class="actions">
-				<%= link_to 'Edit Profile', settings_profile_path, class: 'btn btn-outline-inverse btn-lg' %>
-			</div>
-		<% end %>
+		</div>
 
 		<div class="h4-player-posed hidden-xs">
-			<% if content_for?(:setting_active) %>
-				<div class="player" style="background-image: url(https://spartans.svc.halowaypoint.com/players/<%= gamertag_to_html(current_user.gamertag.gamertag) %>/h4/spartans/posed?target=large)"></div>
-			<% else %>
-				<div class="player" style="background-image: url(https://spartans.svc.halowaypoint.com/players/<%= gamertag_to_html(@account.gamertag.gamertag) %>/h4/spartans/posed?target=large)"></div>
-			<% end %>
+			<div class="player" style="background-image: url(https://spartans.svc.halowaypoint.com/players/<%= gamertag_to_html(storage.gamertag.gamertag) %>/h4/spartans/posed?target=large)"></div>
 		</div>
 	</div>
 </div>
