--- a/app/views/halo4/game_history/view.html.erb
+++ b/app/views/halo4/game_history/view.html.erb
@@ -147,6 +147,16 @@ $('.player-linker').click(function(e) {
 						</li>
 					</ul>
 
+					<div id="myTabContent" class="tab-content">
+						<div class="tab-pane fade active in" id="overview"></div>
+						<div class="tab-pane fade in" id="carnage">
+							<div id="graph-carnage"></div>
+						</div>
+						<div class="tab-pane fade in" id="medals">
+							<div id="graph-medals"></div>
+						</div>
+					</div>
+
 					<table class="table red-team team-table" style="border-left: 4px solid #D96551;">
 						<thead style="background-color: #D96551;">
 							<tr>
