Added morris.js graph cdn's

--- a/app/views/halo4/game_history/view.html.erb
+++ b/app/views/halo4/game_history/view.html.erb
@@ -4,6 +4,9 @@
 <% content_for :halo4_active, 'game_history' %>
 <% content_for :halo4_game_history_active, @css_class %>
 <% content_for :scripts do %>
+<link rel="stylesheet" href="http://cdn.oesmith.co.uk/morris-0.4.3.min.css">
+<script src="//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
+<script src="http://cdn.oesmith.co.uk/morris-0.4.3.min.js"></script>
 <script>
 // Current Tab Sutff
 var currentViewTab = 0;
