--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -28,7 +28,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<%= link_to raw('Branch <sup>{domain}</sup>'), root_url, { class: 'navbar-brand' } %>
+					<%= link_to raw('Branch <sup>{domain}</sup>'), root_url, { class: 'navbar-brand', style: 'color: #' + @watermark + ';' } %>
 				</div>
 				<nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
 					<ul class="nav navbar-nav">
