Added about page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,7 +62,7 @@
 							<%= link_to 'Blog', blog_home_path %>
 						</li>
 						<li class="<%= 'active' if content_for? :about %>">
-							<%= link_to 'About', '#' %>
+							<%= link_to 'About', about_home_path %>
 						</li>
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
