--- a/app/views/halo4/game_history/view.html.erb
+++ b/app/views/halo4/game_history/view.html.erb
@@ -361,22 +361,22 @@
 												<div class="player-data collapsed" style="display: none;">
 													<ul class="nav nav-tabs" style="margin-bottom: 15px;">
 														<li class="active">
-															<a id="tab-summary" href="#summary" data-toggle="tab">Summary</a>
+															<a id="tab-summary" href="#<%= identifier %>-summary" data-toggle="tab">Summary</a>
 														</li>
 														<li>
-															<a id="tab-weapons" href="#weapons" data-toggle="tab">Weapons</a>
+															<a id="tab-weapons" href="#<%= identifier %>-weapons" data-toggle="tab">Weapons</a>
 														</li>
 														<li>
-															<a id="tab-medals" href="#medals" data-toggle="tab">Medals</a>
+															<a id="tab-medals" href="#<%= identifier %>-medals" data-toggle="tab">Medals</a>
 														</li>
 													</ul>
 
-													<div id="player-listing" class="tab-content">
-														<div class="tab-pane fade active in" id="summary">
+													<div class="player-stats" class="tab-content">
+														<div class="tab-pane fade active in" id="<%= identifier %>-summary">
 														</div>
-														<div class="tab-pane fade in" id="weapons">
+														<div class="tab-pane fade" id="<%= identifier %>-weapons">
 														</div>
-														<div class="tab-pane fade in" id="medals">
+														<div class="medals tab-pane fade" id="<%= identifier %>-medals">
 														</div>
 													</div>
 												</div>
